--- a/1.html
+++ b/1.html
@@ -328,17 +328,15 @@
             <h2>連結至同學的網站 </h2>
             <p>以下是我班上三位同學的網頁專題作品連結：</p>
             <div class="footer-links">
-                <a href="https://classmate-a.com" target="_blank">同學 A 的網站</a> |
-                <a href="https://classmate-b.net" target="_blank">同學 B 的專題</a> |
-                <a href="https://classmate-c.org" target="_blank">同學 C 的作品集</a>
+                <a href="https://jst-ux.github.io/kjl/" target="_blank">同學 A 的網站</a> |
+                <a href="https://xiaocheng76.github.io/sg-web/" target="_blank">同學 B 的專題</a> |
+                <a href="https://benbenben0721.github.io/-/" target="_blank">同學 C 的作品集</a>
             </div>
         </section>
 
     </main>
 
-    <footer>
-        <p>&copy; 2024 [您的名字]. 版權所有。專題網站部署於 [GitHub Pages/Netlify] 。</p>
-    </footer>
+    
 
 
     <script>
@@ -394,7 +392,7 @@
                     plugins: {
                         title: {
                             display: true,
-                            text: '我的專題時間分配圖'
+                            text: '我的時間分配圖'
                         }
                     }
                 }
